# fluffy-parakeet

./: CMakeLists.txt  workflow_diagram.mermaid
apps/market_data_service/: main.cpp
include/: MarkPrice.h  OrderBookSimulator.h  PriceGenerator.h
src/: MarketPrice.cpp
src/events/: event_bus.h
src/pricing/: MarkPrice.h  MarketPrice.cpp
src/simulation/: MarketSimulator.h
src/transport/: server.cpp  server.h
test/: CMakeLists.txt  main_test.cpp
